--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
   <div class="absolute -top-6 -right-4 w-28 h-28 rounded-full bg-cura-accent/25 blur-2xl"></div>
   <div class="absolute -bottom-8 -left-4 w-28 h-28 rounded-full bg-cura-primaryDark/50 blur-2xl"></div>
 
-  <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-4">
+  <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-1">
     <p class="text-xs font-semibold text-cura-accentLight uppercase tracking-wide">
       SISTEMA C.U.R.A.
     </p>
 
     <p class="text-sm text-white">
-      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. Fin del papeleo, los trámites repetidos, los estudios duplicados y la burocracia que frena la atención.
+      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país.
     </p>
 
     <p class="text-sm text-white">
