--- a/index.html
+++ b/index.html
@@ -429,6 +429,9 @@
           <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
             Esta iniciativa no solicita aportes económicos. Tu apoyo se basa en informarte, difundir y acompañar el proceso.
           </div>
+                <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
+            Este proyecto solo va a ser posible con tu firma, por eso te invitamos a sumarte y ser parte de la historia.
+          </div>
         </div>
 
         <!-- Formulario (estático) -->
