--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
   <div class="absolute -top-6 -right-4 w-28 h-28 rounded-full bg-cura-accent/25 blur-2xl"></div>
   <div class="absolute -bottom-8 -left-4 w-28 h-28 rounded-full bg-cura-primaryDark/50 blur-2xl"></div>
 
-  <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-1">
+  <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-4">
     <p class="text-xs font-semibold text-cura-accentLight uppercase tracking-wide">
       SISTEMA C.U.R.A.
     </p>
 
     <p class="text-sm text-white">
-      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país.
+      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. Fin del papeleo, los trámites repetidos, los estudios duplicados y la burocracia que frena la atención.
     </p>
 
     <p class="text-sm text-white">
@@ -429,8 +429,12 @@
           <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
             Esta iniciativa no solicita aportes económicos. Tu apoyo se basa en informarte, difundir y acompañar el proceso.
           </div>
-                <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
-            Este proyecto solo va a ser posible con tu firma, por eso te invitamos a sumarte y ser parte de la historia.
+          <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
+            Este proyecto solo va a ser posible con tu firma, por eso te invitamos a
+            <button type="button" id="link-sumarte" class="bg-transparent border-none p-0 m-0 text-white font-semibold underline cursor-pointer hover:text-cura-accentLight">
+              sumarte
+            </button>
+            y ser parte de la historia.
           </div>
         </div>
 
@@ -634,6 +638,7 @@ document.addEventListener('DOMContentLoaded', function () {
 </div>
 
 
+
 <script>
 document.addEventListener('DOMContentLoaded', function () {
   const provinciaSelect = document.querySelector('select[name="provincia"]');
@@ -669,9 +674,11 @@ document.addEventListener('DOMContentLoaded', function () {
     provinciaSelect.addEventListener('change', cargarCiudades);
   }
 
-  
-  const btn = document.getElementById('btn-sumate');
-  const target = document.getElementById('sumate');
+  const btnSumate   = document.getElementById('btn-sumate');
+  const btnInfo     = document.getElementById('btn-info');
+  const linkSumarte = document.getElementById('link-sumarte');
+  const targetSumate = document.getElementById('sumate');
+  const targetInfo   = document.getElementById('informacion');
 
   function smoothScrollTo(element, duration = 1700) {
     const navbarOffset = 200;
@@ -696,15 +703,21 @@ document.addEventListener('DOMContentLoaded', function () {
     requestAnimationFrame(animation);
   }
 
-  if (btn && target) {
-    btn.addEventListener('click', function (e) {
-      e.preventDefault();
-      smoothScrollTo(target, 1700);
-    });
+  function attachScroll(element, target) {
+    if (element && target) {
+      element.addEventListener('click', function (e) {
+        e.preventDefault();
+        smoothScrollTo(target, 1700);
+      });
+    }
   }
 
+  attachScroll(btnSumate, targetSumate);
+  attachScroll(btnInfo, targetInfo);
+  attachScroll(linkSumarte, targetSumate);
 });
 </script>
+
 
 
 
