--- a/index.html
+++ b/index.html
@@ -490,14 +490,21 @@
         </p>
       </div>
 
-      <form class="max-w-md flex gap-2">
-        <input type="email" placeholder="Correo electrónico"
-               class="flex-1 border border-cura-accent/40 rounded-md px-3 py-2 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent" />
-        <button type="submit"
-                class="px-4 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition">
-          OBTENER INFORMACIÓN
-        </button>
-      </form>
+ <form class="max-w-md flex flex-col sm:flex-row gap-2 w-full">
+  <input
+    type="email"
+    placeholder="Correo electrónico"
+    class="flex-1 w-full border border-cura-accent/40 rounded-md px-3 py-2 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent"
+  />
+
+  <button
+    type="submit"
+    class="w-full sm:w-auto px-4 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition"
+  >
+    OBTENER INFORMACIÓN
+  </button>
+</form>
+
     </section>
 
     <!-- AVISO DE EVENTO / NOVEDADES -->
