--- a/index.html
+++ b/index.html
@@ -404,78 +404,90 @@
 
 
 <section id="contacto" class="space-y-6">
-      <div class="max-w-2xl">
-        <h2 class="text-xl md:text-2xl font-bold text-white mb-2">
-          Comunícate con nosotros
-        </h2>
-        <p class="text-sm text-cura-accentLight">
-          Toda pregunta es válida. Nos interesa escuchar tus dudas, aportes y propuestas para que puedas formar parte de esta gran revolución sanitaria.
-        </p>
+  <div class="max-w-2xl">
+    <h2 class="text-xl md:text-2xl font-bold text-white mb-2">
+      Comunícate con nosotros
+    </h2>
+    <p class="text-sm text-cura-accentLight">
+      Toda pregunta es válida. Nos interesa escuchar tus dudas, aportes y propuestas para que puedas
+      formar parte de esta gran revolución sanitaria.
+    </p>
+  </div>
+
+  <div class="grid md:grid-cols-2 gap-8">
+    <!-- Recuadros oscuros (arriba en móvil, arriba izquierda en PC) -->
+    <div class="space-y-4">
+      <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
+        Esta iniciativa no solicita aportes económicos. Tu apoyo se basa en informarte, difundir y acompañar el proceso.
+      </div>
+      <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
+        Este proyecto solo va a ser posible con tu firma, por eso te invitamos a
+        <a href="#sumate" class="underline font-semibold">sumarte</a> y ser parte de la historia.
+      </div>
+    </div>
+
+    <!-- Formulario (a la derecha en PC, en el medio en móvil) -->
+    <form
+      class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3"
+      action="https://formsubmit.co/contacto@leycura.org"
+      method="POST"
+    >
+      <div>
+        <label class="block text-xs font-medium text-cura-accentLight mb-1">Nombre</label>
+        <input
+          type="text"
+          name="nombre"
+          class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary
+                 focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent"
+        />
       </div>
 
-      <div class="grid md:grid-cols-2 gap-8">
-        <!-- Info de contacto -->
-        <div class="space-y-4">
-          <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
-            <h3 class="text-sm font-semibold text-white mb-1">Información de contacto</h3>
-            <p class="text-sm text-cura-accentLight">
-              correo: <a href="mailto:contacto@leycura.org" class="text-white font-semibold underline">contacto@leycura.org</a>
-            </p>
-            <p class="text-xs text-cura-accentLight mt-2">
-              Comunícate con nosotros para más información o para sumarte a la iniciativa.
-            </p>
-          </div>
-          <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
-            Esta iniciativa no solicita aportes económicos. Tu apoyo se basa en informarte, difundir y acompañar el proceso.
-          </div>
-          <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
-            Este proyecto solo va a ser posible con tu firma, por eso te invitamos a
-            <button type="button" id="link-sumarte" class="bg-transparent border-none p-0 m-0 text-white font-semibold underline cursor-pointer hover:text-cura-accentLight">
-              sumarte
-            </button>
-            y ser parte de la historia.
-          </div>
-        </div>
-
-        <!-- Formulario (estático) -->
-        <form id="contact-form"
-        action="https://formsubmit.co/ajax/contacto@leycura.org"
-        method="POST"
-        class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3">
-
-          <input type="hidden" name="_subject" value="Nuevo mensaje desde leycura.org">
-          <input type="hidden" name="_template" value="box">
-          <input type="hidden" name="_captcha" value="false">
-
-          <div>
-            <label class="block text-xs font-medium text-cura-accentLight mb-1">Nombre</label>
-            <input type="text" name="nombre" required
-                   class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent" />
-          </div>
-
-          <div>
-            <label class="block text-xs font-medium text-cura-accentLight mb-1">Correo electrónico *</label>
-            <input type="email" name="email" required
-                   class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent" />
-          </div>
-
-          <div>
-            <label class="block text-xs font-medium text-cura-accentLight mb-1">Mensaje</label>
-            <textarea rows="4" name="mensaje" required
-                      class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent"></textarea>
-          </div>
-
-          <button type="submit"
-                  class="w-full inline-flex justify-center items-center px-3 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition">
-            Enviar
-          </button>
-
-          <p class="text-[10px] text-cura-accentLight mt-1">
-            Este formulario envía tu mensaje directamente al equipo de Ley C.U.R.A.
-          </p>
-        </form>
+      <div>
+        <label class="block text-xs font-medium text-cura-accentLight mb-1">Correo electrónico *</label>
+        <input
+          type="email"
+          required
+          name="email"
+          class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary
+                 focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent"
+        />
       </div>
-    </section>
+
+      <div>
+        <label class="block text-xs font-medium text-cura-accentLight mb-1">Mensaje</label>
+        <textarea
+          rows="4"
+          name="mensaje"
+          class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary
+                 focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent"
+        ></textarea>
+      </div>
+
+      <button
+        type="submit"
+        class="w-full inline-flex justify-center items-center px-3 py-2 rounded-md bg-white text-cura-primary
+               text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition"
+      >
+        Enviar
+      </button>
+
+      <p class="text-[10px] text-cura-accentLight mt-1">
+        Este formulario envía tu mensaje directamente al equipo de Ley C.U.R.A.
+      </p>
+    </form>
+
+    <!-- Info de contacto (último en móvil, abajo izquierda en PC) -->
+    <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
+      <h3 class="text-sm font-semibold text-white mb-1">Información de contacto</h3>
+      <p class="text-sm text-cura-accentLight">
+        correo: <a href="mailto:contacto@leycura.org" class="text-white font-semibold underline">contacto@leycura.org</a>
+      </p>
+      <p class="text-xs text-cura-accentLight mt-2">
+        Comunícate con nosotros para más información o para sumarte a la iniciativa.
+      </p>
+    </div>
+  </div>
+</section>
 
     <!-- NEWSLETTER -->
     <section class="space-y-4">
