--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </p>
 
     <p class="text-sm text-white">
-      Una credencial única y segura que unifica toda la información médica de cada persona. La Historia Clínica acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. 
+      Una credencial única y segura que unifica toda la información médica de cada persona.
 
     <p class="text-sm text-white">
       Beneficios clave para las personas:
@@ -414,7 +414,8 @@
     </p>
   </div>
 
-  <div class="grid md:grid-cols-2 gap-8">
+ <div class="grid md:grid-cols-2 gap-8 items-start">
+
     <!-- Recuadros oscuros (arriba en móvil, arriba izquierda en PC) -->
     <div class="space-y-4">
       <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
