--- a/index.html
+++ b/index.html
@@ -76,15 +76,16 @@
     </div>
 
     <!-- Menú simple -->
-    <nav class="hidden sm:flex items-center gap-5 text-sm font-medium">
-      <a href="#inicio" class="text-cura-accentLight hover:text-white">Inicio</a>
-      <a href="#informacion" class="text-cura-accentLight hover:text-white">Información</a>
-      <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
-      <a href="/demonivel2.html"
-         class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">
-        Demo QR Nivel 2
-      </a>
-    </nav>
+    <nav class="flex flex-wrap items-center gap-3 text-sm font-medium justify-center sm:justify-end">
+  <a href="#inicio" class="text-cura-accentLight hover:text-white">Inicio</a>
+  <a href="#informacion" class="text-cura-accentLight hover:text-white">Información</a>
+  <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
+  <a href="/demonivel2.html"
+     class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">
+    Demo QR Nivel 2
+  </a>
+</nav>
+
 
   </div>
 </header>
