--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <!-- NAVBAR -->
 <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
-  <div class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
+ <div class="max-w-5xl mx-auto px-4 py-3 flex flex-col sm:flex-row gap-3 sm:gap-4 sm:items-center sm:justify-between">
 
     <!-- Logo + texto -->
     <div class="flex items-center gap-2">
@@ -76,16 +76,16 @@
     </div>
 
     <!-- Menú simple -->
-<nav class="flex items-center gap-4 text-sm font-medium whitespace-nowrap overflow-x-auto no-scrollbar">
+<nav class="flex items-center gap-4 text-sm font-medium whitespace-nowrap overflow-x-auto no-scrollbar justify-center sm:justify-end mt-2 sm:mt-0">
   <a href="#inicio" class="text-cura-accentLight hover:text-white">Inicio</a>
   <a href="#informacion" class="text-cura-accentLight hover:text-white">Información</a>
   <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
-
   <a href="/demonivel2.html"
      class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">
     Demo QR Nivel 2
   </a>
 </nav>
+
 
 
 
