--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </style>
 
 </head>
-<body class="font-sans bg-cura-primary text-white">
+<body class="font-sans bg-cura-primary text-white overflow-x-hidden">
 
   <!-- AVISO SUPERIOR -->
   <div class="w-full bg-yellow-50 text-center text-xs text-yellow-900 py-2 px-4">
@@ -76,7 +76,8 @@
     </div>
 
     <!-- Menú simple -->
-<nav class="flex items-center gap-4 text-sm font-medium whitespace-nowrap overflow-x-auto no-scrollbar justify-center sm:justify-end mt-2 sm:mt-0">
+<nav class="flex items-center gap-4 text-sm font-medium whitespace-nowrap justify-center sm:justify-end mt-2 sm:mt-0">
+
   <a href="#inicio" class="text-cura-accentLight hover:text-white">Inicio</a>
   <a href="#informacion" class="text-cura-accentLight hover:text-white">Información</a>
   <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
