--- a/index.html
+++ b/index.html
@@ -145,37 +145,44 @@
 
     <!-- BENEFICIOS EN RECTÁNGULOS -->
     <div class="space-y-2 text-xs text-cura-accentLight">
-      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-        Acceso inmediato a su información médica desde cualquier centro de salud, público o privado del país, y en centros del exterior que utilicen estándares internacionales compatibles.
-      </div>
+     <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong>Acceso inmediato a su información médica desde cualquier centro de salud, público o privado del país</strong>, y en centros del exterior que utilicen estándares internacionales compatibles.
+</div>
+
+
+    <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong>Eliminación total del papel:</strong> órdenes, recetas, troqueles, certificados y estudios pasan a formato digital.
+</div>
+
 
       <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-        Eliminación total del papel: órdenes, recetas, troqueles, certificados y estudios pasan a formato digital.
-      </div>
+  <strong>Recetas electrónicas firmadas automáticamente:</strong> sin volver al médico solo para renovar o firmar.
+</div>
 
-      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-        Recetas electrónicas firmadas automáticamente: sin volver al médico solo para renovar o firmar.
-      </div>
 
-      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-        Integración real con ambulancias, guardias y emergencias: al escanear el QR, se accede solo a lo necesario según el rol (ciudadano, enfermero o médico).
-      </div>
+     <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong>Integración real con ambulancias, guardias y emergencias:</strong> al escanear el QR, se accede solo a lo necesario según el rol (ciudadano, enfermero o médico).
+</div>
 
-      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-        Facilita turnos rápidos, continuidad de tratamientos y evita repetir análisis o contar todo desde cero cada vez.
-      </div>
 
-      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-        Mejoras directas para PAMI: menos trámites, más velocidad, reducción de burocracia y automatización de traslados para personas con movilidad reducida.
-      </div>
+    <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  Facilita turnos rápidos, continuidad de tratamientos y <strong>evita repetir análisis o contar todo desde cero cada vez.</strong>
+</div>
 
-      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-        Seguridad avanzada y segmentación de datos: cada profesional ve únicamente lo que necesita para atender al paciente.
-      </div>
+   <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong>Mejoras directas para PAMI:</strong> menos trámites, más velocidad, reducción de burocracia y automatización de traslados para personas con movilidad reducida.
+</div>
 
-      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-        Reduce costos del sistema completo: menos papeles, menos errores, menos pérdida de información y más eficiencia.
-      </div>
+
+  <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong>Seguridad avanzada y segmentación de datos:</strong> cada profesional ve únicamente lo que necesita para atender al paciente.
+</div>
+
+
+   <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong>Reduce costos del sistema completo:</strong> menos papeles, menos errores, menos pérdida de información y más eficiencia.
+</div>
+
     </div>
 
     <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between">
