--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
       <span class="text-[11px] text-cura-accentLight">
         Proyecto ciudadano presentado según Art. 39 de la Constitución Nacional y Ley 24.747., sin fines de lucro.
       </span>
+       <span class="text-[11px] text-cura-accentLight">
+      </span>
       <span class="text-[11px] text-white font-semibold">#LeyCURA</span>
     </div>
   </div>
