--- a/demonivel2.html
+++ b/demonivel2.html
@@ -48,60 +48,54 @@
         }
     </style>
 </head>
-<body class="min-h-screen flex flex-col pt-20 font-sans">
-
+<body class="min-h-screen flex flex-col pt-24 sm:pt-20 font-sans">
 
 <!-- 1. ENCABEZADO FIJO -->
-<header class="fixed top-0 left-0 w-full bg-medical-primary text-white h-20 flex items-center px-4 shadow-md z-50 justify-between">
+<header class="fixed top-0 left-0 w-full bg-medical-primary text-white shadow-md z-50">
+    <div class="w-full px-4 py-2 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-1.5">
 
-    <!-- IZQUIERDA: Escudo -->
-    <div class="flex items-center gap-3">
-        <img src="/logo_cura.png"
-             alt="Escudo Argentina"
-             class="h-20 w-auto object-contain">
+        <!-- IZQUIERDA: Escudo + textos -->
+        <div class="flex items-center gap-3">
+            <img src="/logo_cura.png"
+                 alt="Escudo Argentina"
+                 class="h-14 sm:h-20 w-auto object-contain">
 
-        <div>
-            <h1 class="text-base font-bold leading-tight uppercase tracking-wide">
-                SISTEMA DE SALUD DIGITAL NACIONAL C.U.R.A.
-            </h1>
-            <p class="text-[11px] opacity-80 font-medium tracking-wider">
-                NIVEL DE ACCESO 2 (URGENCIAS)
-            </p>
+            <div class="leading-tight">
+                <h1 class="text-sm sm:text-base font-bold uppercase tracking-wide">
+                    SISTEMA DE SALUD DIGITAL NACIONAL C.U.R.A.
+                </h1>
+                <p class="text-[11px] opacity-80 font-medium tracking-wider">
+                    NIVEL DE ACCESO 2 (URGENCIAS)
+                </p>
+            </div>
+        </div>
+
+        <!-- DERECHA: Usuario + hora -->
+        <div class="flex flex-col items-end leading-tight mt-1 sm:mt-0">
+            <span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-90">
+                Usuario: FABIAN ALONSO — M.P.: 14615 — M.N.: 115238
+            </span>
+            <span id="hora-acceso"
+                  class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-80">
+            </span>
         </div>
     </div>
-
-    <!-- DERECHA: Usuario + hora -->
-    <div class="flex flex-col items-end leading-tight">
-
-        <!-- Usuario -->
-        <span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-90">
-            Usuario: FABIAN ALONSO — M.P.: 14615 — M.N.: 115238
-        </span>
-
-        <!-- Hora dinámica -->
-        <span id="hora-acceso"
-              class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-80">
-        </span>
-    </div>
-
-    <script>
-        const ahora = new Date();
-        const formato = ahora.toLocaleString('es-AR', {
-            weekday: 'long',
-            year: 'numeric',
-            month: 'long',
-            day: 'numeric',
-            hour: '2-digit',
-            minute: '2-digit',
-            second: '2-digit'
-        });
-        document.getElementById('hora-acceso').textContent =
-            "Acceso registrado: " + formato;
-    </script>
-
 </header>
 
-
+<script>
+    const ahora = new Date();
+    const formato = ahora.toLocaleString('es-AR', {
+        weekday: 'long',
+        year: 'numeric',
+        month: 'long',
+        day: 'numeric',
+        hour: '2-digit',
+        minute: '2-digit',
+        second: '2-digit'
+    });
+    document.getElementById('hora-acceso').textContent =
+        "Acceso registrado: " + formato;
+</script>
 
     <!-- CONTENEDOR PRINCIPAL (Mobile First, ancho limitado para simular vista de scanner/móvil) -->
     <main class="max-w-lg mx-auto px-4 sm:px-6 py-4 space-y-4">
