--- a/index.html
+++ b/index.html
@@ -146,50 +146,44 @@
     <!-- BENEFICIOS EN RECTÁNGULOS -->
     <div class="space-y-2 text-xs text-cura-accentLight">
      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-  <strong>Acceso inmediato a su información médica desde cualquier centro de salud, público o privado del país</strong>, y en centros del exterior que utilicen estándares internacionales compatibles.
+  <strong class="text-white">Acceso inmediato a su información médica desde cualquier centro de salud, público o privado del país</strong>, y en centros del exterior que utilicen estándares internacionales compatibles.
 </div>
 
-
-    <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-  <strong>Eliminación total del papel:</strong> órdenes, recetas, troqueles, certificados y estudios pasan a formato digital.
+<div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong class="text-white">Eliminación total del papel:</strong> órdenes, recetas, troqueles, certificados y estudios pasan a formato digital.
 </div>
 
-
-      <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-  <strong>Recetas electrónicas firmadas automáticamente:</strong> sin volver al médico solo para renovar o firmar.
+<div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong class="text-white">Recetas electrónicas firmadas automáticamente:</strong> sin volver al médico solo para renovar o firmar.
 </div>
 
-
-     <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-  <strong>Integración real con ambulancias, guardias y emergencias:</strong> al escanear el QR, se accede solo a lo necesario según el rol (ciudadano, enfermero o médico).
+<div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong class="text-white">Integración real con ambulancias, guardias y emergencias:</strong> al escanear el QR, se accede solo a lo necesario según el rol (ciudadano, enfermero o médico).
 </div>
 
-
-    <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-  Facilita turnos rápidos, continuidad de tratamientos y <strong>evita repetir análisis o contar todo desde cero cada vez.</strong>
+<div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  Facilita turnos rápidos, continuidad de tratamientos y 
+  <strong class="text-white">evita repetir análisis o contar todo desde cero cada vez.</strong>
 </div>
 
-   <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-  <strong>Mejoras directas para PAMI:</strong> menos trámites, más velocidad, reducción de burocracia y automatización de traslados para personas con movilidad reducida.
+<div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong class="text-white">Mejoras directas para PAMI:</strong> menos trámites, más velocidad, reducción de burocracia y automatización de traslados para personas con movilidad reducida.
 </div>
 
-
-  <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-  <strong>Seguridad avanzada y segmentación de datos:</strong> cada profesional ve únicamente lo que necesita para atender al paciente.
+<div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong class="text-white">Seguridad avanzada y segmentación de datos:</strong> cada profesional ve únicamente lo que necesita para atender al paciente.
 </div>
 
-
-   <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-  <strong>Reduce costos del sistema completo:</strong> menos papeles, menos errores, menos pérdida de información y más eficiencia.
+<div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
+  <strong class="text-white">Reduce costos del sistema completo:</strong> menos papeles, menos errores, menos pérdida de información y más eficiencia.
 </div>
+
 
     </div>
 
     <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between">
       <span class="text-[11px] text-cura-accentLight">
         Proyecto ciudadano presentado según Art. 39 de la Constitución Nacional y Ley 24.747., sin fines de lucro.
-      </span>
-       <span class="text-[11px] text-cura-accentLight">
       </span>
       <span class="text-[11px] text-white font-semibold">#LeyCURA</span>
     </div>
