--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     </div>
 
-    <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between">
+    <div class="pt-2 border-t border-cura-accent/30 flex items-center justify-between gap-2">
       <span class="text-[11px] text-cura-accentLight">
         Proyecto ciudadano presentado según Art. 39 de la Constitución Nacional y Ley 24.747., sin fines de lucro.
       </span>
