--- a/demonivel2.html
+++ b/demonivel2.html
@@ -72,7 +72,8 @@
         <!-- DERECHA: Usuario + hora -->
         <div class="flex flex-col items-end leading-tight min-w-0">
             <span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-90 text-right">
-                Usuario: FABIAN ALONSO — M.P.: 14615 — M.N.: 115238
+                Usuario: FABIAN ALONSO
+                 M.P.: 14615 - M.N.: 115238
             </span>
             <span id="hora-acceso"
                   class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-80 text-right">
@@ -303,3 +304,4 @@
 
 </body>
 </html>
+
