--- a/demonivel2.html
+++ b/demonivel2.html
@@ -72,8 +72,7 @@
         <!-- DERECHA: Usuario + hora -->
         <div class="flex flex-col items-end leading-tight min-w-0">
             <span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-90 text-right">
-                Usuario: FABIAN ALONSO
-                 M.P.: 14615 - M.N.: 115238
+                Usuario: FABIAN ALONSO&nbsp;&nbsp;M.P.: 14615 - M.N.: 115238
             </span>
             <span id="hora-acceso"
                   class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-80 text-right">
@@ -94,7 +93,7 @@
         second: '2-digit'
     });
     document.getElementById('hora-acceso').textContent =
-        "Acceso registrado: " + formato;
+        "Acceso registrado: "&nbsp;&nbsp;+ formato;
 </script>
 
 <!-- CONTENEDOR PRINCIPAL -->
@@ -304,4 +303,5 @@
 
 </body>
 </html>
+
 
