--- a/demonivel2.html
+++ b/demonivel2.html
@@ -72,7 +72,7 @@
         <!-- DERECHA: Usuario + hora -->
         <div class="flex flex-col items-end leading-tight min-w-0">
             <span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-90 text-right">
-                Usuario: FABIAN ALONSO&nbsp;&nbsp;M.P.: 14615 - M.N.: 115238
+                Usuario: FABIAN ALONSO&nbsp;M.P.: 14615 - M.N.: 115238
             </span>
             <span id="hora-acceso"
                   class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-80 text-right">
@@ -303,5 +303,6 @@
 
 </body>
 </html>
+
 
 
