--- a/demonivel2.html
+++ b/demonivel2.html
@@ -94,7 +94,7 @@
         second: '2-digit'
     });
     document.getElementById('hora-acceso').textContent =
-        "Acceso registrado: "&nbsp;&nbsp;+ formato;
+        "Acceso registrado: " + formato;
 </script>
 
 <!-- CONTENEDOR PRINCIPAL -->
@@ -304,6 +304,7 @@
 
 </body>
 </html>
+
 
 
 
