--- a/demonivel2.html
+++ b/demonivel2.html
@@ -93,9 +93,8 @@
         minute: '2-digit',
         second: '2-digit'
     });
-    
-    document.getElementById('hora-acceso').innerHTML =
-        "Acceso registrado:&nbsp;&nbsp;" + formato;
+
+    document.getElementById('hora-acceso').textContent = formato;
 </script>
 
 
@@ -306,6 +305,7 @@
 
 </body>
 </html>
+
 
 
 
