--- a/demonivel2.html
+++ b/demonivel2.html
@@ -81,6 +81,10 @@
         </div>
     </div>
 </header>
+<span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-80 text-right">
+    <span>Acceso registrado:</span>
+    <span id="hora-acceso" class="ml-2"></span>
+</span>
 
 <script>
     const ahora = new Date();
@@ -305,6 +309,7 @@
 
 </body>
 </html>
+
 
 
 
