--- a/demonivel2.html
+++ b/demonivel2.html
@@ -81,10 +81,11 @@
         </div>
     </div>
 </header>
-<span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-80 text-right">
+<span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-80 flex justify-end w-full">
     <span>Acceso registrado:</span>
     <span id="hora-acceso" class="ml-2"></span>
 </span>
+
 
 <script>
     const ahora = new Date();
@@ -309,6 +310,7 @@
 
 </body>
 </html>
+
 
 
 
