--- a/demonivel2.html
+++ b/demonivel2.html
@@ -81,11 +81,6 @@
         </div>
     </div>
 </header>
-<span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-80 flex justify-end w-full">
-    <span>Acceso registrado:</span>
-    <span id="hora-acceso" class="ml-2"></span>
-</span>
-
 
 <script>
     const ahora = new Date();
@@ -99,7 +94,7 @@
         second: '2-digit'
     });
 
-    document.getElementById('hora-acceso').textContent = formato;
+    document.getElementById('hora-acceso').textContent = formato + ;&nbsp;"Acceso registrado.";
 </script>
 
 
@@ -310,6 +305,7 @@
 
 </body>
 </html>
+
 
 
 
