--- a/demonivel2.html
+++ b/demonivel2.html
@@ -94,7 +94,7 @@
         second: '2-digit'
     });
 
-    document.getElementById('hora-acceso').textContent = formato + ;&nbsp;"Acceso registrado.";
+    document.getElementById('hora-acceso').textContent = formato + " Acceso registrado.";
 </script>
 
 
@@ -305,6 +305,7 @@
 
 </body>
 </html>
+
 
 
 
