--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md">
     <h3 class="text-sm font-semibold text-white mb-1">Interoperabilidad</h3>
     <p class="text-xs text-cura-accentLight">
-      Basada en estándares internacionales para que todos los sistemas “hablen el mismo idioma”.
+      LLeva tu historia clinica a donde sea que vayas, podrás acceder a tu historia clinica desde cualquier ciudad o provincia. Un sistema basada en estándares internacionales para que todos los sistemas “hablen el mismo idioma”.
     </p>
   </div>
 
