--- a/demonivel2.html
+++ b/demonivel2.html
@@ -70,7 +70,7 @@
         </div>
 
         <!-- DERECHA: Usuario + hora -->
-        <div class="flex flex-col items-end leading-tight min-w-0">
+       <div class="flex flex-col items-end leading-tight min-w-0 w-full">
             <span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-90 text-right">
     Usuario: FABIAN ALONSO <span class="ml-2">M.P.: 14615 - M.N.: 115238</span>
 </span>
@@ -307,6 +307,7 @@
 
 </body>
 </html>
+
 
 
 
