--- a/demonivel2.html
+++ b/demonivel2.html
@@ -71,9 +71,11 @@
 
         <!-- DERECHA: Usuario + hora -->
        <div class="flex flex-col items-end leading-tight min-w-0 w-full">
-            <span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-90 text-right">
-    Usuario: FABIAN ALONSO <span class="ml-2">M.P.: 14615 - M.N.: 115238</span>
+           <span class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-90 text-right leading-tight">
+    Usuario: FABIAN ALONSO<br>
+    <span>M.P.: 14615 - M.N.: 115238</span>
 </span>
+
 
             <span id="hora-acceso"
       class="text-[9px] sm:text-[11px] font-medium tracking-wider text-white opacity-80 text-right">
@@ -84,19 +86,24 @@
 
 <script>
     const ahora = new Date();
-    const formato = ahora.toLocaleString('es-AR', {
+
+    const fecha = ahora.toLocaleDateString('es-AR', {
         weekday: 'long',
         year: 'numeric',
         month: 'long',
-        day: 'numeric',
+        day: 'numeric'
+    });
+
+    const hora = ahora.toLocaleTimeString('es-AR', {
         hour: '2-digit',
         minute: '2-digit',
         second: '2-digit'
     });
 
     document.getElementById('hora-acceso').innerHTML =
-        formato + '<br>Acceso registrado.';
+        fecha + "<br>" + hora + " — Acceso registrado.";
 </script>
+
 
 
 
@@ -309,6 +316,7 @@
 
 </body>
 </html>
+
 
 
 
