--- a/index.html
+++ b/index.html
@@ -556,6 +556,35 @@
     </div>
   </footer>
 
+<!-- MODAL NOVEDADES -->
+<div id="novedades-modal"
+     class="modal-backdrop fixed inset-0 bg-black/60 flex items-center justify-center z-50 hidden">
+  <div class="modal-card bg-cura-card border border-cura-accent/60 rounded-2xl px-4 py-4 sm:px-6 sm:py-5 w-[92%] max-w-4xl shadow-lg">
+    <div class="flex items-start justify-between gap-3">
+      <div class="flex-1">
+        <h2 class="text-sm sm:text-base font-semibold text-white mb-1">
+          Bienvenido, tenemos novedades
+        </h2>
+        <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-3 text-[11px] sm:text-[13px] text-cura-accentLight">
+          <p class="sm:max-w-[65%] leading-snug">
+            La ley será presentada por primera vez del 28 al 30 de abril de 2026 en el
+            V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.
+          </p>
+          <p class="sm:max-w-[30%] leading-snug">
+            Próximamente más información sobre la presentación y materiales descargables.
+          </p>
+        </div>
+      </div>
+
+      <!-- Botón cerrar -->
+      <button type="button"
+              class="ml-2 text-cura-accentLight/80 hover:text-white text-xs sm:text-sm font-semibold"
+              id="novedades-close-btn">
+        ✕
+      </button>
+    </div>
+  </div>
+</div>
 
 <!-- MODAL ÉXITO FORMULARIO -->
 <div id="success-modal"
@@ -1027,6 +1056,49 @@ document.addEventListener('DOMContentLoaded', function () {
       if (e.target === newsletterModal) cerrarNewsletterModal();
     });
   }
+});
+</script>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const modal = document.getElementById('novedades-modal');
+  if (!modal) return;
+
+  const card = modal.querySelector('.modal-card');
+  const closeBtn = document.getElementById('novedades-close-btn');
+
+  function abrirNovedades() {
+    modal.classList.remove('hidden');
+    requestAnimationFrame(function () {
+      modal.classList.add('show');
+      if (card) card.classList.add('show');
+    });
+  }
+
+  function cerrarNovedades() {
+    modal.classList.remove('show');
+    if (card) card.classList.remove('show');
+    setTimeout(function () {
+      modal.classList.add('hidden');
+    }, 250); // mismo tiempo que las transiciones .modal-backdrop / .modal-card
+  }
+
+  // Abrir apenas carga la página
+  abrirNovedades();
+
+  // Cerrar automático a los 20 segundos
+  setTimeout(cerrarNovedades, 20000);
+
+  // Cerrar con el botón ✕
+  if (closeBtn) {
+    closeBtn.addEventListener('click', cerrarNovedades);
+  }
+
+  // Cerrar al hacer click fuera de la tarjeta
+  modal.addEventListener('click', function (e) {
+    if (e.target === modal) {
+      cerrarNovedades();
+    }
+  });
 });
 </script>
 
