--- a/index.html
+++ b/index.html
@@ -530,17 +530,15 @@
     </section>
 
     <!-- AVISO DE EVENTO / NOVEDADES -->
-    <section class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md flex flex-col md:flex-row md:items-center md:justify-between gap-3">
-      <div>
-        <h3 class="text-sm font-semibold text-white mb-1">Tenemos novedades</h3>
-        <p class="text-xs text-cura-accentLight">
-          La ley será presentada por primera vez del 28 al 30 de abril de 2026 en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.
-        </p>
-      </div>
-      <div class="text-xs text-cura-accentLight">
-        Próximamente más información sobre la presentación.
-      </div>
-    </section>
+<section class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md">
+  <h3 class="text-sm font-semibold text-white mb-1">Tenemos novedades</h3>
+
+  <p class="text-xs text-cura-accentLight leading-snug">
+    La ley será presentada por primera vez del 28 al 30 de abril de 2026<br>
+    en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.
+  </p>
+</section>
+
 
   </main>
 
